Bug 1507746 - Shorten the flexbox container's selector in the accordion header if its too long. r=gl
Differential Revision: https://phabricator.services.mozilla.com/D12292

UltraBlame original commit: 408a5c502d131500a050ecfb929e6cf7f0e403b3

--- a/devtools/client/inspector/layout/components/Accordion.css
+++ b/devtools/client/inspector/layout/components/Accordion.css
@@ -209,6 +209,34 @@ alt
 .
 accordion
 .
+_header
+.
+truncate
+{
+display
+:
+block
+;
+overflow
+:
+hidden
+;
+white
+-
+space
+:
+nowrap
+;
+text
+-
+overflow
+:
+ellipsis
+;
+}
+.
+accordion
+.
 _content
 {
 border
